# codec-latent-denoiser

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: demo.py
datasets/vb_demand_synthetic/: prepare_data.ipynb
docs/: notes.md
notebooks/: demo.ipynb
src/: lightning_utils.py  train.py
src/codec_latent_denoiser/: __init__.py  config.py  model.py  processor.py
src/train_configs/: default.yaml  e1.yaml  e2.yaml  e3.yaml
